--- a/src/Page/Signin/Signin.css
+++ b/src/Page/Signin/Signin.css
@@ -1,10 +1,10 @@
-/* body{
+body{
     background-image: url('../../image/536776.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
     opacity: .9;
-} */
+}
 
 
 .main{
