--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -1,13 +1,16 @@
-/* * {
-    margin: 0 !important;
+*  {
+    /* margin: 0 !important; */
     font-family: "Roboto", sans-serif;
-  } */
-  
+  } 
+  .Link{
+    text-decoration: none;
+    color: #9A7036;
+  }
   .sidebar {
     width: 230px;
-    height: 100vh;
-    background-color: #eef8ff45;
-    color: #9ca3af;
+    height: auto;
+    background-color: white;
+    color: #9A7036;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -59,6 +62,7 @@
     cursor: pointer;
     padding: 10px;
     border-radius: 10px;
+    color: #9A7036;
   }
   
   .list-item-icon {
