--- a/src/Page/Signin/Signin.css
+++ b/src/Page/Signin/Signin.css
@@ -1,54 +1,89 @@
 body{
-    background-image: url('../../image/536776.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
-    opacity: .9;
+    background-color: #FCF4EA;
 }
 
 
 .main{
-    width:"100%" ;
+    width:"100%" !important ;
     background-color: #eef8ffed;
    
+}
+.maindivimag{
+    background-image: url('../../image/img1.jpeg');
+    opacity: 0.8;
+  
+    height: 578px;
+padding: 1%;
 
-     
-    
+background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; 
+}
+  .logoimg{
+   
+        display: flex;
+        justify-content: center;
+      
+   
+  }
+  .container{
+      width: 100%;
+  }
+#username{
+    margin-top: 20px !important;
+    border: #F1844D !important;
+}
+#password{
+    margin-top: 20px !important;
+
+}
+    .btnlogin{
+        margin-top: 20px !important;
+        background-color: #F1844D !important;
     }
+    .MuiInputBase-input {
+      
+    }
+
     .signinform{
-        margin-left:"900px";
-        width: 40%;
+        margin-left:"900px" !important;
+        width: 40% !important;
     }
     .login{
-  margin-left: 600px;
     
+        display: flex;
+        justify-content: center;
+        margin-top: 5%;
+       
     }
+
+    
     @media screen and (min-device-width: 360px) and (max-device-width: 765px) { 
         .login{
-            margin-left: auto;
+            margin-left: auto ;
             
               
               }
     }
     @media screen and (min-device-width: 768px) and (max-device-width: 1180px) { 
         .login{
-            margin-left: 250px;
+            margin-left: 250px ;
             
               
               }
     }
     @media screen and (min-device-width: 540px) and (max-device-width: 720px) { 
         .login{
-            margin-left: 100px;
+            margin-left: 100px ;
             
               
               }
     }
     @media screen and (min-device-width: 280px) and (max-device-width: 655px) { 
         .login{
-            margin-left: 10px;
+            margin-left: 10px ;
             margin-top: 100px;
-            width: max-content;
+            width: max-content ;
           
             
               
@@ -57,8 +92,8 @@ body{
 
     @media screen and (min-device-width: 600px) and (max-device-width: 1280px) { 
         .login{
-            margin-left: 300px;
-            margin-right: -200px;
+            margin-left: 300px !important;
+            margin-right: -200px !important;
             
               
               }
